[workspace]
members = [
    "leptos-rerun",
    "examples/simple-viewer",
    "examples/with-server",
    "examples/gallery-viewer",
]
default-members = ["leptos-rerun"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Alex Rozgo <alex.rozgo@gmail.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
axum = { version = "0.8", default-features = false }
cfg-if = "1"
console_error_panic_hook = "0.1"
console_log = "1"
http = "1"
js-sys = "0.3"
leptos = { version = "0.8.17", default-features = false }
leptos_axum = { version = "0.8.8", default-features = false }
leptos_meta = { version = "0.8.6", default-features = false }
leptos_router = { version = "0.8.13", default-features = false }
log = "0.4"
send_wrapper = "0.6"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1"
serde-wasm-bindgen = "0.6"
tokio = { version = "1.43", default-features = false }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false }
tracing = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
web-sys = "0.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
