[package]
name = "with-server"
version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { workspace = true, optional = true, features = ["tokio", "http1"] }
cfg-if.workspace = true
console_error_panic_hook.workspace = true
console_log.workspace = true
http.workspace = true
leptos = { workspace = true, default-features = false }
leptos-rerun = { path = "../../leptos-rerun", default-features = false }
leptos_axum = { workspace = true, optional = true }
leptos_meta = { workspace = true, default-features = false }
leptos_router = { workspace = true, default-features = false }
log.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net"], optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, features = ["fs"], optional = true }
tracing.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = ["console"] }

[features]
hydrate = ["leptos/hydrate", "leptos-rerun/hydrate"]
ssr = [
    "dep:axum",
    "dep:leptos_axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-rerun/ssr",
]

[package.metadata.cargo-all-features]
denylist = ["axum", "leptos_axum", "tokio", "tower", "tower-http"]
skip_feature_sets = [["hydrate", "ssr"]]

[package.metadata.leptos]
output-name = "with-server"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
